--- a/index.html
+++ b/index.html
@@ -25,6 +25,39 @@
             </div>
             <img class = "profile" src = "folder-images/Portfolio-pfp.jpeg" alt="Renee Uchida Profile Picture">
             
+        <!-- My UX Skills section coded using CSS Flex-->
+        </section class = "mySkills">
+            <h1 class = "skillHeader">My UX Skills</h1>
+            <div class = "flexContainer">
+                <div class = "skill">
+                    <h2>UX Researcher</h2>
+                    <p>Performed surveys and interviews to gather insight towards users needs</p>
+                </div>
+                <div class = "skill">
+                    <h2>UX Designer</h2>
+                    <p>Built low-fidelity to high-fidelity prototypes via sketching and Figma</p>
+                </div>
+            </div>
+        <section>
+
+        <section class = "myWork">
+            <h1 class = "workHeader">My Work</h1>
+            <div class = "workGrid">
+                <div class = "work">
+                    <h2>Travel App</h2>
+                    <p>Deisgned a Travel Application that can help solo travelers find local hotspots as well as local activities that they can partake in.</p>
+                    <button>View Project</button>
+                </div>
+                <div class = "work">
+                    <h2>Vitality</h2>
+                    <p>Designed a Fitness application that can help fitness advocates track and learn more about fitness and nutrition.</p>
+                    <button>View Project</button>
+                </div>
+                <h3>View All Projects</h3>
+            </div>
+            
+        </section>
+
         </section>
     </body>
 </html>
